# ore-private-pool-srv

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  ore_priv_pool.db.sqlite3  rustfmt.toml  whitelist.txt.example
bin.example/: start-ore-ppl-srv.sh  start-ore-srv-win  start-ore-srv-win.ps1
migrations/2024-09-06-025357_db-init/: down.sql  up.sql
migrations/sqlite/: drop.sql  init.sql
src/: database.rs  dynamic_fee.rs  main.rs  message.rs  models.rs  notification.rs  ore_utils.rs  tpu.rs  utils.rs
src/processors/: client_message_processor.rs  messaging_all_clients_processor.rs  mod.rs  ping_check_processor.rs  pong_tracking_processor.rs  pool_mine_success_processor.rs  pool_submission_processor.rs  proof_tracking_processor.rs  ready_clients_processor.rs  reporting_processor.rs
