[package]
edition = "2021"
name    = "ore-hq-server"
version = "0.2.0"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
base64 = "0.22.1"
bincode = "1.3.3"
cached = "0.46.1"
chrono = "0.4.38"
clap = { version = "4.5.14", features = ["derive"] }
color-eyre = { version = "0.6" }
crossbeam-channel = "0.5.13"
deadpool-diesel = { version = "0.6.1", features = ["mysql"] }
diesel = { version = "2.2.2", features = ["mysql", "chrono"] }
dotenv = "0.15.0"
drillx = "2.0.0"
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = [
    "sink",
    "std",
] }
ore-api = "2.1.0"
ore-utils = "2.1.0"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"] }
rodio = "0.18.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
solana-client = "1.18.12"
solana-program = "1.18.12"
solana-sdk = "1.18.12"
spl-associated-token-account = { version = "2.2", features = ["no-entrypoint"] }
tokio = { version = "1.39.2", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5"
