[package]
name = "ore-private-pool-srv"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "A lightweight release of Ore mining private pool server. derived from and credited to ore-hq-server."
repository = "https://github.com/miraland-labs/ore-private-pool-srv"
readme = "./README.md"
keywords = ["solana", "crypto", "ore", "miraland", "mining-pool"]

[[bin]]
name = "ore-ppl-srv"
path = "src/main.rs"

[features]
default = ["powered-by-dbms-sqlite"]
powered-by-dbms-postgres = [
    "dep:deadpool-postgres",
    "dep:tokio-postgres",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:tokio-postgres-rustls",
]
powered-by-dbms-sqlite = ["dep:deadpool-sqlite", "dep:rusqlite"]

[dependencies]
axum = { version = "=0.7.2", features = ["macros", "ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
base64 = "0.22.1"
bincode = "1.3.3"
bitflags = "2.6.0"
cached = "0.46.1"
chrono = "0.4.38"
clap = { version = "4.5.14", features = ["derive"] }
color-eyre = { version = "0.6" }
crossbeam-channel = "0.5.13"
# deadpool = "0.12.1"                                             # MI, optional
# deadpool-sqlite = { git = "https://github.com/bikeshedder/deadpool.git", rev = "e6de358" }
deadpool-sqlite = { package = "miraland-deadpool-sqlite", version = "0.8.2", optional = true }
deadpool-postgres = { version = "0.14.0", features = [
    "serde",
], optional = true }
config = "0.14.0"
# MI, vanilla
# dotenv = "0.15.0"
dotenvy = "0.15.7"
drillx = "2.0.0"
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = [
    "sink",
    "std",
] }
ore-api = "2.1.0"
ore-utils = "2.1.0"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"] }
rodio = "0.18.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
solana-account-decoder = "1.18.12"
solana-client = "1.18.12"
solana-rpc-client = "1.18.12"
# solana-rpc-client-api = "1.18.12"
# solana-tpu-client = { version = "1.18.12", features = ["default"] }
solana-program = "1.18.12"
solana-sdk = "1.18.12"
solana-transaction-status = "1.18.12"
spl-associated-token-account = { version = "2.2", features = ["no-entrypoint"] }
spl-token = { version = "4", features = ["no-entrypoint"] }
# tokio = { version = "1.39.2", features = ["full"] }
tokio = { version = "1.39.2", features = ["full", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5"
slack-messaging = "0.3.1"
serenity = { version = "=0.11.7", default-features = false, features = [
    "rustls_backend",
    "model",
] }
zeroize = "=1.3.0"
rusqlite = { version = "0.32.1", features = ["bundled"], optional = true }
tokio-postgres = { version = "0.7.12", optional = true }
tokio-postgres-rustls = { version = "0.10", optional = true }
rustls = { version = "0.21", optional = true }
rustls-pemfile = { version = "2", optional = true }
